incorporacion de nuevos graficos adaptados a javascript puro

--- a/treemap/index.html
+++ b/treemap/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-   
-    <script src="orgChart.js"></script>
+    <!-- <script src="orgChart.js"></script> -->
+    <script src="treemap.js"></script>
 </body>
 </html>
